<resources>
    <string name="app_name">BlackAce</string>

    <string name="local_application">应用</string>
    <string name="local_file">文件</string>
    <string name="sign_keystore">签名密钥</string>
    <string name="sign_model">签名方案</string>
    <string name="add_task">添加任务</string>
    <string name="app_pkg">包名</string>
    <string name="app_version">版本</string>
    <string name="app_size">安装包大小</string>
    <string name="app_protect">加固检测</string>
    <string name="app_setting">软件设置</string>
    <string name="app_manager">软件管理</string>
    <string name="sign_manager">签名管理</string>
    <string name="about_app">关于软件</string>
    <string name="user_info">用户信息</string>
    <string name="no_login">未登录</string>
    <string name="login_pls">请先登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_account">注册账号</string>
    <string name="click_login">点击登录</string>
    <string name="account_setting">账号设置</string>
    <string name="other">其它</string>

    <string name="open_fail">打开失败</string>

    <string name="login_hint">欢迎回来\n登录后即可使用软件全部功能</string>

    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="confirm_pass">确认密码</string>
    <string name="email">邮箱</string>
    <string name="register_email_hint">请填写正确的邮箱，修改密码及找回密码时需要接收验证码。</string>
    <string name="forget_password">忘记密码</string>
    <string name="password_must_6">密码至少为6位</string>
    <string name="verify_must_6">验证码应为6位纯数字</string>
    <string name="username_must_no_empty">用户名不能为空</string>
    <string name="password_must_confirm">前后密码不一致</string>
    <string name="no_email">邮箱格式不正确</string>
    <string name="change_password">修改密码</string>
    <string name="change_password_now">点击修改密码</string>
    <string name="find_password">找回密码</string>
    <string name="login_out">退出登录</string>
    <string name="confirm_change">确定修改</string>
    <string name="origin_pass">原密码</string>
    <string name="email_verify">邮箱验证码</string>
    <string name="send_now">立刻发送</string>
    <string name="resend">重新发送%d</string>
    <string name="new_pass">新密码</string>
    <string name="verify_send_to">验证码将发送到注册时填写的邮箱</string>
    <string name="verify_was_send">验证码已发送到邮箱%s</string>
    <string name="login_out_hint">是否退出登录？</string>
    <string name="password_change_success">密码修改成功，请重新登录</string>
    <string name="password_change_success_with_pass">密码修改成功，你的新密码为:%s,稍后请重新登录。</string>
    <string name="bind_email_with_register">邮箱地址</string>
    <string name="register_time">注册时间</string>
    <string name="feature">特色功能</string>

    <string name="create_task">创建任务</string>

    <string name="request_permission">授予权限</string>
    <string name="request_permission_hint">我们需要文件读写权限，才能读取设备中的文件</string>
    <string name="done">确定</string>
    <string name="install">安装</string>
    <string name="cancel">取消</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>

    <string name="default_sign">默认</string>
    <string name="sign_file_was_delete">签名文件不存在</string>
    <string name="sign_pass_error">签名文件无法打开，请检查密码是否正确</string>
    <string name="sign_alias_pass_error">签名文件无法打开，请检查别名密码是否正确</string>
    <string name="add">添加</string>
    <string name="add_sign">添加签名</string>
    <string name="add_success">添加成功</string>
    <string name="delete_success">删除成功</string>
    <string name="local_sign">已保存签名</string>
    <string name="alias">别名</string>
    <string name="alias_pass">别名密码</string>
    <string name="delete_sign">删除</string>
    <string name="delete_sign_hint">是否删除该签名？删除后将无法使用。</string>
    <string name="delete_task">删除任务</string>
    <string name="delete_task_hint">是否删除所选任务？删除后将从任务列表中移除，并且释放本地APK占用空间。</string>
    <string name="no_task">暂无任务，请点击右下角按钮添加</string>
    <string name="no_sign">暂无签名，请在添加签名界面添加</string>
    <string name="task_wait">等待中</string>
    <string name="task_success">打包</string>
    <string name="task_error">处理失败</string>
    <string name="task_processing">任务处理中，请等待处理完成</string>
    <string name="task_process_fail">任务处理失败</string>
    <string name="task_process_again">该任务已生成APK，无法再次生成</string>
    <string name="task_app_name">软件名</string>
    <string name="task_version_name">版本名</string>
    <string name="task_version_code">版本号</string>
    <string name="task_create_fail">创建失败</string>
    <string name="input_no_null_with_hint">%s不能为空</string>
    <string name="package_apk">生成APK</string>
    <string name="select_sign">请选择签名</string>
    <string name="start_package">开始打包</string>
    <string name="apk_was_delete">本地APK已被删除</string>
    <string name="input_no_null">输入不能为空</string>
    <string name="package_success">打包成功</string>
    <string name="package_success_hint">生成的APK储存在%s</string>
    <string name="not_support_apks">暂不支持Apks方式安装的软件，请安装APK版本的软件。</string>

    <string name="network_error">网络连接错误</string>
    <string name="init_fail">初始化失败</string>
    <string name="init_fail_msg">软件初始化失败，请检查网络连接是否正常:%s</string>
    <string name="exit">退出软件</string>
    <string name="reload">重新加载</string>
    <string name="version_is_newest">当前版本已是最新版本</string>
    <string name="new_version">新版本 %s</string>
    <string name="update_now">立即更新</string>
    <string name="update_next">下次再说</string>
    <string name="ignore_version">忽略此版本</string>
    <string name="browser_download">浏览器下载</string>
    <string name="re_download">重新下载</string>
    <string name="apk_invalid">APK损坏，请重新下载</string>

    <string name="export_success">导出成功，文件保存在:%s</string>

    <string name="install_success">安装成功</string>
    <string name="install_fail">安装失败</string>
    <string name="install_tip">安装提示</string>
    <string name="install_success_hint">%s安装成功，是否立即启动？</string>
    <string name="install_fail_hint">软件安装失败：%s,可前往文件管理器手动安装，APK所在路径：%s</string>
    <string name="need_uninstall_hint">当前安装包跟本地已安装的软件签名不一致，继续安装可能会失败，是否前往卸载</string>
    <string name="install_continue">继续安装</string>
    <string name="uninstall">立即卸载</string>
    <string name="launch">立即启动</string>

    <string name="hour">小时</string>
    <string name="unuse">未使用</string>
    <string name="used">已使用</string>
    <string name="about_telegram">Telegram群</string>
    <string name="about_github">开源地址</string>

</resources>
