<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="24dp"
    android:paddingBottom="16dp">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/verifyLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/email_verify"
        app:layout_constraintBottom_toTopOf="@id/passLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:helperText="@string/verify_send_to"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="16" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSendVerify"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/send_now"
        app:layout_constraintEnd_toEndOf="@id/verifyLayout"
        app:layout_constraintTop_toTopOf="@id/verifyLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/new_pass"
        app:layout_constraintBottom_toTopOf="@id/btnVerify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="16" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnVerify"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/confirm_change"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
