<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/taskParent"
    android:backgroundTint="@color/colorContainer"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="4dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@id/tvPkg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            tools:text="1.0.0 13M" />

        <TextView
            android:id="@+id/tvPkg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvInfo"
            tools:text="com.blackace.app" />

        <com.dd.CircularProgressButton
            android:id="@+id/progressButton"
            android:layout_width="72dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:paddingVertical="0dp"
            android:textColor="?android:attr/textColorPrimaryInverse"
            android:textSize="12dp"
            app:cpb_cornerRadius="14dp"
            app:cpb_textComplete="@string/task_success"
            app:cpb_textError="@string/task_error"
            app:cpb_textIdle="@string/task_wait"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkbox"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
